--- a/roles/vim/templates/.vimrc.j2
+++ b/roles/vim/templates/.vimrc.j2
@@ -4,6 +4,7 @@ set nocompatible                  " be iMproved
 filetype off                      " required for Vundle
 syntax on
 set backspace=indent,eol,start
+set listchars=tab:→\ ,eol:↲,nbsp:␣,trail:•
 
 " search
 set incsearch
