--- a/roles/vim/templates/.vimrc.j2
+++ b/roles/vim/templates/.vimrc.j2
@@ -28,6 +28,7 @@ set rtp+=~/.vim/bundle/Vundle.vim
 call vundle#begin()
 Plugin 'VundleVim/Vundle.vim'
 Plugin 'scrooloose/nerdtree'
+Plugin 'dense-analysis/ale'
 call vundle#end()
 
 filetype plugin indent on
