Adding Vim plugins (surround, jinja and indent)

--- a/roles/vim/templates/.vimrc.j2
+++ b/roles/vim/templates/.vimrc.j2
@@ -30,7 +30,10 @@ Plugin 'VundleVim/Vundle.vim'
 Plugin 'scrooloose/nerdtree'
 Plugin 'tpope/vim-fugitive'
 Plugin 'tpope/vim-commentary'
+Plugin 'tpope/vim-surround'
 Plugin 'dense-analysis/ale'
+Plugin 'lepture/vim-jinja'
+Plugin 'Yggdroot/indentLine'
 call vundle#end()
 
 filetype plugin indent on
