Setting python3 as the binary for starship

--- a/roles/bash/templates/.config/starship.toml.j2
+++ b/roles/bash/templates/.config/starship.toml.j2
@@ -24,6 +24,9 @@ disabled = true
 [java]
 disabled = true
 
+[python]
+python_binary = 'python3'
+
 [[battery.display]]
 threshold = 20
 style = "bold red"
