--- a/roles/tools/templates/etc/apt/sources.list.j2
+++ b/roles/tools/templates/etc/apt/sources.list.j2
@@ -3,3 +3,5 @@
 deb http://deb.debian.org/debian/ testing main non-free contrib
 deb http://security.debian.org/debian-security testing-security main contrib non-free
 deb http://deb.debian.org/debian/ testing-updates main contrib non-free
+
+deb http://deb.debian.org/debian/ unstable main non-free contrib
